--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon</title>
+    <script src="./js/mokepon.js"></script>
 </head>
 <body>
     <h1>MOKEPON!</h1>
@@ -11,16 +12,16 @@
     <section id="seleccionar-mascota"></section>
         <H2>Elige tu mascota:</H2>
 
-        <label for="Hipodoge">Hipodoge</label>
-        <input type="radio" name="mascota" id="Hipodoge">
+        <label for="hipodoge">Hipodoge</label>
+        <input type="radio" name="mascota" id="hipodoge">
 
-        <label for="Capipepo">Capipepo</label>
-        <input type="radio" name="mascota" id="Capipepo">
+        <label for="capipepo">Capipepo</label>
+        <input type="radio" name="mascota" id="capipepo">
 
-        <label for="Ratigueya">Ratigueya</label>
-        <input type="radio" name="mascota" id="Ratigueya">
+        <label for="ratigueya">Ratigueya</label>
+        <input type="radio" name="mascota" id="ratigueya">
 
-        <button>Seleccionar</button>
+        <button id="boton-mascota">Seleccionar</button>
 
     <section id="seleccionar-ataque">
         <H2>Elige tu ataque</H2>
@@ -28,9 +29,9 @@
         <p>Tu mascota tiene <span>3</span> vidas</p>
         <p>La mascota del enemigo tiene <span>3</span> vidas</p>
         <P>
-            <button>Fuego 🔥</button>
-            <button>Agua 💦</button>
-            <button>Tierra 🌱</button>
+            <button id="boton-fuego">Fuego 🔥</button>
+            <button id="boton-agua">Agua 💦</button>
+            <button id="boton-tierra">Tierra 🌱</button>
         </P>
     </section>
 
@@ -39,7 +40,7 @@
     </section>
 
     <section id="reiniciar">
-        <button>Reiniciar</button>
+        <button id="boton-reiniciar">Reiniciar</button>
     </section>
 
 </body>
