--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon</title>
-    <script src="./js/mokepon.js"></script>
 </head>
 <body>
     <h1>MOKEPON!</h1>
 
-    <section id="seleccionar-mascota"></section>
-        <H2>Elige tu mascota:</H2>
+    <section id="seleccionar-mascota">
+        <h2>Elige tu mascota:</h2>
 
         <label for="hipodoge">Hipodoge</label>
         <input type="radio" name="mascota" id="hipodoge">
@@ -22,12 +21,14 @@
         <input type="radio" name="mascota" id="ratigueya">
 
         <button id="boton-mascota">Seleccionar</button>
+    </section>
 
     <section id="seleccionar-ataque">
         <H2>Elige tu ataque</H2>
 
-        <p>Tu mascota tiene <span>3</span> vidas</p>
-        <p>La mascota del enemigo tiene <span>3</span> vidas</p>
+        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+
         <P>
             <button id="boton-fuego">Fuego 🔥</button>
             <button id="boton-agua">Agua 💦</button>
@@ -36,12 +37,13 @@
     </section>
 
     <section id="mensajes">
-        <p>Tu mascota ataco con fuego, la mascota del enemigo ataco con tierra - Ganaste🎉🎊</p>
+
     </section>
 
     <section id="reiniciar">
         <button id="boton-reiniciar">Reiniciar</button>
     </section>
 
+    <script src="./js/mokepon.js"></script>
 </body>
 </html>
