--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>MOKEPON!</h1>
-
     <section id="seleccionar-mascota">
+        <h1 class="titulo">MOKEPON!</h1>
         <h2>Elige tu mascota:</h2>
 
         <label for="hipodoge">Hipodoge</label>
@@ -24,6 +24,7 @@
     </section>
 
     <section id="seleccionar-ataque">
+        <h1 class="titulo">MOKEPON!</h1>
         <H2>Elige tu ataque</H2>
 
         <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
