--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section id="seleccionar-mascota">
-        <h1 class="titulo">MOKEPON!</h1>
+        <h1 class="titulo">MOKEPON</h1>
         
         <h2 class="subtitulo">Elige tu mascota:</h2>
 
@@ -36,25 +36,28 @@
     </section>
 
     <section id="seleccionar-ataque">
-        <h1 class="titulo">MOKEPON!</h1>
-        <H2>Elige tu ataque</H2>
+        <h1 class="titulo">MOKEPON</h1>
 
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+        <h2 class="subtitulo">Elige tu ataque:</h2>
+        
+        <div>
+            <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
+            <button id="boton-agua" class="boton-de-ataque">Agua 💦</button>
+            <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
+        </div>
 
-        <P>
-            <button id="boton-fuego">Fuego 🔥</button>
-            <button id="boton-agua">Agua 💦</button>
-            <button id="boton-tierra">Tierra 🌱</button>
-        </P>
-    </section>
+        <div>
+            <section id="mensajes"></section>
 
-    <section id="mensajes">
+            <section id="reiniciar">
+                <button id="boton-reiniciar">Reiniciar</button>
+            </section>
+        </div>
 
-    </section>
-
-    <section id="reiniciar">
-        <button id="boton-reiniciar">Reiniciar</button>
+        <div>
+            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+            <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+        </div>       
     </section>
 
     <script src="./js/mokepon.js"></script>
